--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rabeya Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Pushster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section class="disign">
+        
+<div class="style">
+    <h1>Welcome TO</h1>
+    <h1><span class="add-color">Hermione Granger</span> World</h1>
+    <h3>Prodigious Intellect and Cleverness</h3>
+    <p>
+        I am strong-willed,determined to succeed,i know well what i want and i know how to get it.I know which is right or wrong.You might saw me i'm strong,honest,independent,intelligent,motivating.Now i want to learning web development.I will not stop until i became the Web Developer.
+    </p>
+    <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
+
+</div>
+
+<div class="style">
+    <img src="images/my-pf.png" alt="">
+</div>
+
+</section>
+
+
 </body>
 </html>
