--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
 
 </section>
 
+<section class="middle-part">
+
+<div class="style">
+    <img src="images/km.pf.png" alt="">
+</div>
+
+<div class="style">
+
+    <h1>Dreame Big</h1>
+    <h3>Become a Web Developer</h3>
+    <p>If you think math is hard,try web disign.I already learned the basic HTML and CSS. I can build any simple website. I can even teach my Mother how to make simple website. My goal is to build  websites and learn advanced topics.          </p>
+
+    <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+
+</div>
+
+</section>
+
 
 </body>
 </html>
