--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="disign">
+<section class="disign flexible-container">
         
 <div class="style">
     <h1>Welcome TO</h1>
@@ -30,7 +30,7 @@
 
 </section>
 
-<section class="middle-part">
+<section class="middle-part flexible-container">
 
 <div class="style">
     <img src="images/km.pf.png" alt="">
@@ -48,6 +48,32 @@
 
 </section>
 
+<section class="last-part">
+    <h1>Experiences</h1>
+    <div class="flexible-container">
+        <div id="full-shadow" class="developer">
+            <h1>Full Stack Developer</h1>
+            <h3 class="add-color" >2022-Present | Pro Level Developer</h3>
+            <p>
+                I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+            </p>
+        </div>
+        
+        <div id="baby-shadow" class="developer">
+            <h1>Baby Web Developer</h1>
+            <h3 class="add-color" >2022-2023 | Programming Hero Learner</h3>
+            <p>
+                They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+            </p>
+        </div>
+    </div>
 
+</section>
+
+<footer>
+    <p>
+        © Peter Parker 2022,a Programming Hero initiative.
+    </p>
+</footer>
 </body>
 </html>
