--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <footer>
     <p>
-        © Peter Parker 2022,a Programming Hero initiative.
+        © Hermione Granger 2022,a Programming Hero initiative.
     </p>
 </footer>
 </body>
